# ClipForge

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample.env  setup.py  setup.sh  start.sh
app/: __init__.py
app/core/: settings.py
app/models/: __init__.py  database.py
app/routes/: dashboard.py  health.py  presets.py  share.py  upload.py  video.py
app/templates/: base.html  dashboard.html  presets.html  upload.html  video.html
app/utils/: face_crop.py  ffmpeg_ops.py  files.py  llm.py  processing.py  silence.py
static/: app.js
templates/: health.html  videos.html
